<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>it.essepuntato</groupId>
	<artifactId>LODE</artifactId>
	<version>1.3-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>

		<!-- aterm -->
		<dependency>
			<groupId>com.github.ansell.aterms</groupId>
			<artifactId>aterm-java</artifactId>
			<version>1.8.2-p1</version>
		</dependency>

		<!-- saxon-he -->
		<dependency>
			<groupId>net.sf.saxon</groupId>
			<artifactId>Saxon-HE</artifactId>
			<version>9.8.0-14</version>
		</dependency>

		<!-- jgrapht -->
		<dependency>
			<groupId>org.jgrapht</groupId>
			<artifactId>jgrapht-core</artifactId>
			<version>1.2.0</version>
		</dependency>

		<!-- pellet -->
		<dependency>
			<groupId>com.github.ansell.pellet</groupId>
			<artifactId>pellet-core</artifactId>
			<version>2.3.6-ansell</version>
		</dependency>
		<dependency>
			<groupId>com.github.ansell.pellet</groupId>
			<artifactId>pellet-datatypes</artifactId>
			<version>2.3.6-ansell</version>
		</dependency>
		<dependency>
			<groupId>com.github.ansell.pellet</groupId>
			<artifactId>pellet-el</artifactId>
			<version>2.3.6-ansell</version>
		</dependency>
		<dependency>
			<groupId>com.github.ansell.pellet</groupId>
			<artifactId>pellet-owlapiv3</artifactId>
			<version>2.3.6-ansell</version>
		</dependency>
		<dependency>
			<groupId>com.github.ansell.pellet</groupId>
			<artifactId>pellet-rules</artifactId>
			<version>2.3.6-ansell</version>
		</dependency>

		<!-- owlapi -->
		<dependency>
			<groupId>net.sourceforge.owlapi</groupId>
			<artifactId>owlapi-distribution</artifactId>
			<version>5.1.7</version>
		</dependency>

		<!-- servlets -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>3.0-alpha-1</version>
			<scope>provided</scope>
		</dependency>

	</dependencies>


	<build>

		<plugins>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<compilerArgs>
						<arg>-Xlint</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
  				<groupId>org.eclipse.jetty</groupId>
  				<artifactId>jetty-maven-plugin</artifactId>
  				<version>9.4.12.v20180830</version>
				<configuration>
					<stopPort>9966</stopPort>
					<stopKey>foo</stopKey>
					<scanIntervalSeconds>10</scanIntervalSeconds>
					<webApp>
						<contextPath>/lode</contextPath>
					</webApp>
					<connectors>
						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
							<port>8080</port>
							<maxIdleTime>60000</maxIdleTime>
						</connector>
					</connectors>
					<supportedPackagings>
                		<supportedPackaging>jar</supportedPackaging>
              		</supportedPackagings>
				</configuration>
			</plugin>

		</plugins>

	</build>

</project>